[package]
name = "bdf_parser"
version = "0.1.0"
authors = ["furcb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
byteorder = "1.3.4"
nom = "5"

[dev-dependencies]
plotly = "0.6.0"
